--- a/trading.html
+++ b/trading.html
@@ -16,7 +16,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="HandheldFriendly" content="true">
 
+
+
   <link href="stylesheets/style.css" rel="stylesheet" type="text/css">
+
+
+  <script src="javascripts/amcharts/amcharts.js"></script>
+  <script src="javascripts/amcharts/serial.js"></script>
 </head>
 
 <body>
@@ -91,12 +97,12 @@
 
             <a class="nav__item " href="/learn_trading.html">Обучение</a>
 
-            <a class="nav__item " href="/">Корпоративным клиентам</a>
+            <a class="nav__item " href="/corporate.html">Корпоративным клиентам</a>
 
           </nav>
           <div class="nav nav--variant-small">
 
-            <a href="/" class="nav__item ">Аналитика</a>
+            <a href="/analytics.html" class="nav__item ">Аналитика</a>
 
             <a href="/" class="nav__item ">Инвесторам и акционерам</a>
 
@@ -612,7 +618,7 @@
   </style>
   <input type="checkbox" name="__pageListInput" id="__pageListInput">
   <div id="pagelist">
-    <label for="__pageListInput">pages <span>5</span>
+    <label for="__pageListInput">pages <span>7</span>
     </label>
     <div>
       <ul>
@@ -626,12 +632,17 @@
         </li>
         <li><a href="/learn_trading.html">5.&nbsp;Обучение</a>
         </li>
+        <li><a href="/corporate.html">6.&nbsp;Корпоративным клиентам</a>
+        </li>
+        <li><a href="/analytics.html">7.&nbsp;Аналитика</a>
+        </li>
       </ul>
       <div>
       </div>
       <!-- / PageList  -->
       <script src="javascripts/jquery-3.3.1.min.js"></script>
       <script src="javascripts/libs.js"></script>
+
       <script src="javascripts/common.js"></script>
 </body>
 
